Session3/yaml/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /review
        pathType: Prefix
        backend:
          service:
            name: review-service-lb
            port:
              number: 80
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service-lb
            port:
              number: 80
